--- a/sorting_visualizer/src/App.css
+++ b/sorting_visualizer/src/App.css
@@ -1,3 +1,14 @@
 * {
-  margin: 0
+  margin: 0;
+}
+
+body {
+  height: 82vh;
+}
+
+.heading-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 10vh;
 }
